--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/main.css">
-  <title>The Ultimate Quiz Challenge</title>
+  <link rel="stylesheet" href="css/bgstyle.css">
+  <title>Video Game Quiz!</title>
  </head>
 <body>
-  <div class="container">
-  <h1>The Ultimate Quiz Challenge</h1>
-   <script src="quiz.js"></script> 
+  <div class="container top">
+  	<h1>Video Game Quiz</h1>
   </div>
+  <div class="container main">
+  	<p>How many can you get correct?</p>
+  	<img src="img/collage.jpg">
+  </div>
+
+   <script src="quiz.js"></script> 
 </body>
 </html>
