--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   	<h1>Video Game Quiz</h1>
   </div>
   <div class="container main">
-  	<p>How many can you get correct?</p>
+  	<p>Can you get five out of five?</p>
   	<img src="img/collage.jpg">
   </div>
-
-   <script src="quiz.js"></script> 
+  <script src="quiz.js"></script> 
 </body>
 </html>
