--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   	<h1>Video Game Quiz</h1>
   </div>
   <div class="container main">
-  	<p>Can you get five out of five?</p>
+  	<p>Did you get five out of five?</p>
   	<img src="img/collage.jpg">
   </div>
   <script src="quiz.js"></script> 
